Segunda parte interativa do mapa

--- a/index.html
+++ b/index.html
@@ -480,6 +480,28 @@
                             <tspan x="850" dx="10" dy="20">ou seja, é necessrio uma grande</tspan>
                             <tspan x="850" dx="10" dy="20">massa para causar um buraco negro.</tspan>
                         </text>
+                      </g>                      
+                      <g id="singularidade-explanation" class="explanation">
+                        <rect class="pop-ups" x="90" y="290" width="355" height="130" />
+                        <text class="texts explanation-text" x="100" y="290" >
+                            <tspan x="90" dx="10" dy="20">A singularidade é descrita como um ponto na curvatura</tspan>
+                            <tspan x="90" dx="10" dy="20">do espaço-tempo em que a densidade do corpo está tão</tspan>
+                            <tspan x="90" dx="10" dy="20">concentrada que se torna infinita. Esse acontecimento</tspan>
+                            <tspan x="90" dx="10" dy="20">gera um campo gravitacional forte o suficiente para</tspan>
+                            <tspan x="90" dx="10" dy="20">assumir uma geometria afunilada no espaço-tempo,</tspan>
+                            <tspan x="90" dx="10" dy="20">atraindo corpos celestes que estão ao seu redor.</tspan>
+                        </text>
+                      </g>
+                      <g id="horizonte-ev-explanation" class="explanation">
+                        <rect class="pop-ups" x="600" y="290" width="340" height="130" />
+                        <text class="texts explanation-text" x="600" y="290" >
+                            <tspan x="600" dx="10" dy="20">O horizonte de eventos é uma fronteira em que o que</tspan>
+                            <tspan x="600" dx="10" dy="20">foi atraído pelo buraco negro não retorna mais. Esse</tspan>
+                            <tspan x="600" dx="10" dy="20">é o ponto em que o buraco apresenta uma curvatura</tspan>
+                            <tspan x="600" dx="10" dy="20">íngrime no tecido do espaço-tempo e o corpo atraído </tspan>
+                            <tspan x="600" dx="10" dy="20">tende a seguir em direção à singularidade. A partir</tspan>
+                            <tspan x="600" dx="10" dy="20">desse limite forma-se também o disco de acreção.</tspan>
+                        </text>
                       </g>
                     </svg>
                   </div>
