--- a/index.html
+++ b/index.html
@@ -498,9 +498,12 @@
               <div class="simulacao" id="calculadora">
                 <h2>O raio de Schwarzschild</h2>
                 <div class="hire">
-                  <p>O raio de Schwarzschild ralaciona a massa de um objeto com o raio do horizonte de eventos que este teria para ser um buraco negro de Schwarzschild ()</p>
-                  <p>Aqui você poderá calcular qual será o raio de uma esfera para que, com a massa informada, ela seja um buraco negro de acordo com a equação do Raio de Schwarzschild.
-                      Para isso, você precisa informar apenas a massa do corpo (é possível usar notação científica, sendo um número na forma {a}e{x} reprensentando {a}x10<sup>{b}</sup>)
+                  <p>O raio de Schwarzschild ralaciona a massa de um objeto com o raio do horizonte de eventos
+                     que este teria para ser um buraco negro de Schwarzschild. Tal raio é proporcional à massa 
+                    e tem como constante de proporcionalidade a expressão 2G/c². G é a constante cosmológica e c é velocidade da luz.</p>
+                  <p>Aqui você poderá calcular qual será o raio de uma esfera para que, com a massa informada,
+                     ela seja um buraco negro de acordo com a equação do Raio de Schwarzschild.
+                    Para isso, você precisa informar apenas a massa do corpo (é possível usar notação exponencial)
                       </p>
                   <label for="calculadora--massa"> 
                     Massa: <input type="number" id="calculadora--massa"> kg
@@ -595,11 +598,8 @@
   <script src="assets/js/vendor/black-hole.js"></script>
   <script src="assets/js/vendor/jquery.timelinr-0.9.7.js"></script>
   <script src="assets/js/functions.js"></script>
-<<<<<<< Updated upstream
   <script src="assets/js/mind-map.js"></script>
-=======
   <script src="assets/js/calculadora.js"></script>
->>>>>>> Stashed changes
 </body>
 
 </html>
