Corrige erros de ortografia

--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
                   </div>
                   <h2>O espaço-tempo</h2>
                   <div class="hire">
-                    <p>As Equações de Campo de Einstein motram a interação entre a matéria e o espaco-tempo: </p>
+                    <p>As Equações de Campo de Einstein mostram a interação entre a matéria e o espaco-tempo: </p>
                     <img src="assets/img/EFE.png" alt="Equações de campo de Einstein">
                     <p>Do lado esquerdo da equação, temos a geometria do espaço tempo:
                       como ele curva, como define as noções de tempo, distancia e sequencia de eventos.
