--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
               <li><span>Mapa<br>Conceitual</span></li>
               <li><span>Simulação</span></li>
               <li><span>Calculadora</span></li>
+              <li><span>Curvatura</span></li>
               <li><span>Quem somos</span></li>
             </ul>
           </nav>
@@ -535,10 +536,14 @@
                 </div>
               </div>
             </li>
-
             <li class="l-section section">
               <div class="work">
-                <h2>Quem somos</h2>
+                <h2>Curvatura</h2>
+              </div>
+            </li>
+            <li class="l-section section">
+              <div class="work">
+                <h2>Curvatura</h2>
                 <div class="work--lockup">
                   <ul class="slider">
                     <li class="slider--item slider--item-left">
@@ -611,6 +616,7 @@
       <li>Mapa Conceitual</li>
       <li>Simulação</li>
       <li>Calculadora</li>
+      <li>Curvatura</li>
       <li>Quem somos</li>
     </ul>
   </div>
