Adição da explicação de curvatura no inicial

--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
                     <h3>Calculadora</h3>
                     <p>Verifique se o corpo informado seria um buraco negro</p>
                   </span>
+                  <span>
+                    <h3>Curvatura</h3>
+                    <p>Observe a distorção por outra perspectiva.</p>
+                  </span>
                 </div>
               </div>
             </li>
