--- a/index.html
+++ b/index.html
@@ -438,16 +438,16 @@
                       <tspan x="100" dx="10" dy="20">nada consegue escapar da atração de</tspan>
                       <tspan x="100" dx="10" dy="20">sua força de gravidade.</tspan>
                     </text>
-                  </g>
+                  </g>                                
                   <g id="geometria-explanation" class="explanation">
-                    <rect class="pop-ups" x="200" y="272" width="260" height="130" />
+                    <rect class="pop-ups" x="200" y="272" width="345" height="130" />
                     <text class="texts explanation-text" x="200" y="272">
-                      <tspan x="200" dx="10" dy="20">TÁ ERRADO AQUI OPORRA CARAI CU </tspan>
-                      <tspan x="200" dx="10" dy="20">comanda a movimentação dos objetos.</tspan>
-                      <tspan x="200" dx="10" dy="20">Ela é um dos elementos essenciais na</tspan>
-                      <tspan x="200" dx="10" dy="20">a formação de um buraco negro, pois</tspan>
-                      <tspan x="200" dx="10" dy="20">nada consegue escapar da atração de</tspan>
-                      <tspan x="200" dx="10" dy="20">sua força de gravidade.</tspan>
+                      <tspan x="200" dx="10" dy="20">A geometria define como massa e energia curvam o </tspan>
+                      <tspan x="200" dx="10" dy="20">espaço-tempo, gerando campo gravitacional. A métrica </tspan>
+                      <tspan x="200" dx="10" dy="20">de Schwarzschild, por exemplo, descreve o campo </tspan>
+                      <tspan x="200" dx="10" dy="20">gravitacional em torno de um objeto esférico e </tspan>
+                      <tspan x="200" dx="10" dy="20">consegue representar um buraco negro sem carga </tspan>
+                      <tspan x="200" dx="10" dy="20">ou momento angular (buraco negro de Schwarzschild).</tspan>
                     </text>
                   </g>
                   <g id="densidade-explanation" class="explanation">
@@ -506,6 +506,28 @@
                       <tspan x="600" dx="10" dy="20">íngrime no tecido do espaço-tempo e o corpo atraído </tspan>
                       <tspan x="600" dx="10" dy="20">tende a seguir em direção à singularidade. A partir</tspan>
                       <tspan x="600" dx="10" dy="20">desse limite forma-se também o disco de acreção.</tspan>
+                    </text>
+                  </g>
+                  <g id="horizonte-ev-explanation" class="explanation">
+                    <rect class="pop-ups" x="600" y="290" width="340" height="130" />
+                    <text class="texts explanation-text" x="600" y="290">
+                      <tspan x="600" dx="10" dy="20">O horizonte de eventos é uma fronteira em que o que</tspan>
+                      <tspan x="600" dx="10" dy="20">foi atraído pelo buraco negro não retorna mais. Esse</tspan>
+                      <tspan x="600" dx="10" dy="20">é o ponto em que o buraco apresenta uma curvatura</tspan>
+                      <tspan x="600" dx="10" dy="20">íngrime no tecido do espaço-tempo e o corpo atraído </tspan>
+                      <tspan x="600" dx="10" dy="20">tende a seguir em direção à singularidade. A partir</tspan>
+                      <tspan x="600" dx="10" dy="20">desse limite forma-se também o disco de acreção.</tspan>
+                    </text>
+                  </g>
+                  <g id="disco-acrecao-explanation" class="explanation">
+                    <rect class="pop-ups" x="750" y="345" width="325" height="130" />
+                    <text class="texts explanation-text" x="750" y="345">
+                      <tspan x="750" dx="10" dy="20">O disco de acreção é uma estrutura formada</tspan>
+                      <tspan x="750" dx="10" dy="20">por diversos materiais em movimento orbital</tspan>
+                      <tspan x="750" dx="10" dy="20">faz com que o momento angular seja redistribuído,</tspan>
+                      <tspan x="750" dx="10" dy="20">causando a o movimento em espiral em direção</tspan>
+                      <tspan x="750" dx="10" dy="20">ao centro, enquanto emitindo energia em forma</tspan>
+                      <tspan x="750" dx="10" dy="20">de radiação eletromagnética.</tspan>
                     </text>
                   </g>
                 </svg>
