Tirei um ponto final

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                   </span>
                   <span>
                     <h3>Curvatura</h3>
-                    <p>Observe a distorção por outra perspectiva.</p>
+                    <p>Observe a distorção por outra perspectiva</p>
                   </span>
                 </div>
               </div>
