Correção de detalhe no texto timeline

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                         <div class="timeline-item-body">
                           <h1>Estrela de Nêutrons</h1>
                           <h2>Volkoff-Oppenheimer</h2>
-                          <p>Fritz Zwicky. em 1939, foi o primeiro a supor a existência de estrelas de nêutrons. Ele
+                          <p>Fritz Zwicky, em 1939, foi o primeiro a supor a existência de estrelas de nêutrons. Ele
                             alegava que essas estrelas seriam responsáveis por pelos fenômenos mais energéticos
                             conhecidos, as explosões de supernovas, e pela existência de raios cósmicos – teoria
                             elaborada com a colaboração de Walter Baade. No entanto devido a falta de credibilidade
@@ -528,7 +528,7 @@
                       <tspan x="750" dx="10" dy="20">causando a o movimento em espiral em direção</tspan>
                       <tspan x="750" dx="10" dy="20">ao centro, enquanto emitindo energia em forma</tspan>
                       <tspan x="750" dx="10" dy="20">de radiação eletromagnética.</tspan>
-                    </text>
+                     </text>
                   </g>
                 </svg>
               </div>
