Revisão de títulos

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <li><span>Simulação</span></li>
               <li><span>Calculadora</span></li>
               <li><span>Curvatura</span></li>
-              <li><span>Quem somos</span></li>
+              <li><span>Quem<br>Somos</span></li>
             </ul>
           </nav>
           <ul class="l-main-content main-content">
@@ -576,7 +576,7 @@
             </li>
             <li class="l-section section">
               <div class="work">
-                <h2>Curvatura</h2>
+                <h2>Quem Somos</h2>
                 <div class="work--lockup">
                   <ul class="slider">
                     <li class="slider--item slider--item-left">
@@ -650,7 +650,7 @@
       <li>Simulação</li>
       <li>Calculadora</li>
       <li>Curvatura</li>
-      <li>Quem somos</li>
+      <li>Quem Somos</li>
     </ul>
   </div>
 
