--- a/index.html
+++ b/index.html
@@ -559,20 +559,18 @@
                     </label>
                     <p id="calculadora--resultado">Insira um valor de massa para obter o raio do horizonte de eventos</p>
                   </div>
-                  <h2>O espaço-tempo</h2>
-                  <div class="hire">
-                    <p>As Equações de Campo de Einstein mostram a interação entre a matéria e o espaco-tempo: </p>
-                    <img src="assets/img/EFE.png" alt="Equações de campo de Einstein">
-                    <p>Do lado esquerdo da equação, temos a geometria do espaço tempo:
-                      como ele curva, como define as noções de tempo, distancia e sequencia de eventos.
-                    Do lado direiro, o fluxo de momento e energia, tal como massa e radiação, sendo a origem dos campos gravitacionais.  </p>
-                    </div>
-              </div>
-            </li>
-            <li class="l-section section">
-              <div class="work">
-                <h2>Curvatura</h2>
-              </div>
+                </li>
+                <li class="l-section section">
+                  <div class="simulacao">
+                    <h2>O espaço-tempo</h2>
+                    <div class="hire">
+                      <p>As Equações de Campo de Einstein mostram a interação entre a matéria e o espaco-tempo: </p>
+                      <img src="assets/img/EFE.png" alt="Equações de campo de Einstein">
+                      <p>Do lado esquerdo da equação, temos a geometria do espaço tempo:
+                        como ele curva, como define as noções de tempo, distancia e sequencia de eventos.
+                      Do lado direiro, o fluxo de momento e energia, tal como massa e radiação, sendo a origem dos campos gravitacionais.  </p>
+                      </div>
+                  </div>
             </li>
             <li class="l-section section">
               <div class="work">
