--- a/index.html
+++ b/index.html
@@ -570,26 +570,18 @@
                         como ele curva, como define as noções de tempo, distancia e sequencia de eventos.
                       Do lado direiro, o fluxo de momento e energia, tal como massa e radiação, sendo a origem dos campos gravitacionais.  </p>
                       
-              <!--<input
-              type="range"
-              id="mass"
-              list="tickmarks"
-              min="0"
-              max="100"
-              step="50"
-            />-->
               <input
               type="range"
               id="mass"
               list="tickmarks"
               min="0"
-              max="50"
-              step="50"
+              max="100"
+              step="25"
             />
             <datalist id="tickmarks">
               <option value="0" label="0%"> 0</option>
               <option value="50" label="50%"> 50</option>
-              <!--<option value="100" label="100%">100 </option> -->
+              <option value="100" label="100%">100 </option>
             </datalist>
 
             <svg width="960" height="500" id="curve"></svg>
